--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch atvPraticaCNPJ/valida.ts"
+    "dev": "tsx watch atvPraticaCNPJ/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prompt-sync": "^4.2.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "uuid": "^12.0.0"
