--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch atvPraticaCNPJ/index.ts"
+    "dev": "tsx watch atvPraticaData/index.ts"
   },
   "keywords": [],
   "author": "",
