--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx leituraescritaDeArquivos/index.ts"
+    "dev": "tsx atvGravarDados/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^6.1.0",
+    "csv-stringify": "^6.6.0",
     "prompt-sync": "^4.2.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
